--- a/challenge-chrome-extension/manifest.json
+++ b/challenge-chrome-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "My Extensions",
+  "name": "My Extension",
   "description": "Base Level Extension",
   "version": "1.0",
   "action": {
